common/common.scss
@import url('https://cdn.alphien.com/fonts.googleapis.com/Open_Sans_300_400_400i_600_700.css');
@import url('https://cdn.alphien.com/fonts.googleapis.com/PT_Serif_400_400i.css');

body {
  font-family: "Open Sans", sans-serif;
  font-size: 0.95rem;
  font-weight: 400;
  background: #f8f8f8;
  -webkit-font-smoothing: antialiased;
}

.topic-list-item:hover {
  background-color: hsla(167, 69%, 37%, 0.122);
}

.tab.active {
  background-color: var(--header_background);
}

.discourse-no-touch .d-header-icons {
  .icon:hover {
    background-color: initial;
  }
}
.drop-down-mode .d-header-icons .active .icon,
.discourse-no-touch .d-header-icons .icon:focus {
  background-color: var(--secondary);
}

.drop-down-mode .d-header-icons .active .d-icon,
.discourse-no-touch .d-header-icons .icon:focus .d-icon {
  fill: var(--primary-medium);
}

.d-header-icons .d-icon {
  fill: var(--secondary);
}

.menu-links-header {
  button:hover,
  button:focus {
    background-color: var(--primary-low);
  }
}

.link-top-line a {
  display: block;
}

@media screen and (min-width: 768px) {
  .header-buttons .btn-primary {
    font-size: 1em;
    font-weight: 600;
  }
}

.control-group.pref-avatar button,
.save-changes,
.pref-name .instructions {
  display: none;
}

body.blog,
body.blog-sub-category,
body.blog-post {
  a {
    text-decoration: none;
    color: $primary;
  }

  .btn {
    position: relative;
    font-size: 1em;
    z-index: 1;
    border: none;

    &:after {
      content: "";
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 100%;
      z-index: -2;
    }

    &:before {
      content: "";
      position: absolute;
      bottom: 0;
      left: 0;
      width: 0%;
      height: 100%;
      transition: all 0.3s;
      z-index: -1;
    }

    &:hover {
      &:before {
        width: 100%;
      }
    }
  }

  .btn-fixed {
    position: fixed;
    display: flex;
    align-items: center;
    bottom: 2em;
    border-radius: 2em;
    padding: 1em;
    box-shadow: shadow("card");
    cursor: pointer;
    overflow: hidden;
    z-index: 100;
    box-sizing: border-box;

    .fixed-avatar,
    .fixed-icon {
      width: 30px;
      height: 30px;
    }

    .fixed-avatar {
      border-radius: 50%;
    }

    .fixed-user {
      padding: 0.1em 0 0 0.4em;
    }

    .fixed-icon {
      display: flex;
      align-items: center;
      justify-content: center;

      svg {
        width: 100%;
        height: 100%;
      }
    }

    .fixed-label {
      margin-left: 0.5em;
      font-weight: 800;
    }
  }

  .btn-blog {
    @extend .btn-fixed;
    left: 1.75em;

    .d-icon {
      fill: $secondary;
    }

    &:after {
      background-color: $primary;
    }

    &:before {
      background-color: darken($primary, 15%);
    }

    .fixed-label {
      color: $secondary;
    }

    .fixed-icon svg {
      height: 80%;
      width: 80%;
    }
  }

  .btn-subscribe {
    @extend .btn-fixed;
    color: $primary-very-low;
    right: 1.75em;

    &:after {
      background-color: $quaternary;
    }

    &:before {
      background-color: darken($quaternary, 15%);
    }

    .fixed-icon {
      svg {
        fill: $secondary;
      }
    }
  }

  .btn-like {
    display: flex;
    align-items: center;
    box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.04);
    border-radius: 3px;
    font-weight: bold;
    padding: 12px 18px;
    margin-left: 10px;

    i {
      width: 1.3em;
      height: 1.3em;
      display: flex;
      align-items: center;
      justify-content: center;
      margin-right: 0.4em;

      svg {
        width: 100%;
        height: 100%;
        fill: currentColor;
      }
    }

    &.liked {
      background-color: dark-light-diff($tertiary, $secondary, -25%, -25%);
      cursor: not-allowed;
    }
  }

  .topic-tags {
    margin-top: 0.7em;
    display: flex;
    align-items: center;

    .tag-icon {
      color: $primary-high;
      width: 18px;
      height: 18px;
      display: flex;
      align-items: center;
      justify-content: center;
      margin-right: .4em;

      svg {
        width: 100%;
        height: 100%;
        fill: currentColor;
      }
    }

    .tag-item {
      color: $tertiary;
      margin-right: 0.4em;

      &:hover {
        color: dark-light-diff($tertiary, $secondary, -25%, -25%) !important;
      }
    }
  }
}
/* ... */

